[package]
name = "firebase-auth"
version = "0.5.0"
license = "MIT"
edition = "2021"
readme = "../README.md"

[lib]
name = "firebase_auth"
path = "src/lib.rs"

[features]
default = [ "axum"]
axum = ["dep:axum"]

[dependencies]
axum = { version = "0.8", optional = true }
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
jsonwebtoken = "9.1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
base64 = "0.22.1"
